chore: fix code style and quality issues
- Adjusted code to comply with Checkstyle rules.
- Resolved issues found by PMD, SpotBugs, and Modernizer.
- Updated tests to meet coding standards and conventions.